# haia

./: .dockerignore  .env.dev  .env.example  .gitignore  CLAUDE.md  LICENSE  NEXT_PHASE_PLANNING.md  README.md  ROADMAP.md  VALIDATION_REPORT_SESSION_10.md  alembic.ini  docker-compose.test.yml  haia_profile.example.yaml  pyproject.toml  test_llm_manual.py  test_streaming_manual.py  update-haia.sh
.claude/commands/: feature.md
.specify/memory/: constitution.md
database/backups/: README.md  backup.sh  restore.sh
database/schema/: README.md  init-schema.cypher  vector-index.cypher  verify-schema.cypher
deployment/: DEPLOYMENT.md  Dockerfile  README.md  cleanup.sh  docker-compose.dev.yml  docker-compose.yml  docker-install.sh  haia.service  install.sh
docs/: EARLY_BRAINSTORMING.MD  SESSIONS.md  implementation-kickoff-prompt.md
docs/architecture/: README.md  implementation-plan-enhanced.md  memory-system-principles.md
docs/brainstorming/: 2025-11-30-mvp-chat-feature.md  2025-12-06-haia-personal-memory-system.md  2025-12-10-hybrid-temporal-memory-architecture.md
docs/research/: relevance_scoring_algorithms.md
specs/001-llm-abstraction/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-conversation-db/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-openai-chat-api/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-system-prompt-redesign/: COMPLETE.md  implementation-complete.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  test-questions.txt  validation-results.txt
src/haia/: __init__.py  agent.py  config.py  main.py  profile.py
src/haia/api/: app.py  (+1 more)
tests/: conftest.py
tests/contract/: test_openai_compatibility.py
tests/e2e/: test_memory_lifecycle.sh  test_retrieval_direct.sh
tests/integration/: test_backup_restore.py  test_concurrency.py  test_context_optimization.py  test_context_window.py  test_conversation_boundary.py  test_conversation_management.py  test_db_persistence.py  test_docker_deployment.py  test_embedding_workflow.py  test_llm_providers.py  test_neo4j_connection.py  test_performance.py  test_retrieval_integration.py
tests/unit/: test_backfill_worker.py  test_boundary_detection.py  test_budget_manager.py  test_conversation_tracker.py  test_deduplication.py  test_deduplicator.py  test_embedding_models.py  test_memory_storage.py  test_neo4j_service.py  test_ollama_client.py  test_ranker.py  test_relevance_scoring.py  test_retrieval_service.py
(+73 files in other folders)
